versi 1.0 masih statis

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -192,7 +192,7 @@ ul.submenu li a.active {
 /* //menu */
 /*-- banner-- */
 .banner-left-side {
-    background: url(../images/ibu.jpg);
+    background: url(https://via.placeholder.com/500x400);
     background-repeat: no-repeat;
     background-position: center;
     -webkit-background-size: cover;
